[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
ipc-channel = "0.18"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21"
bincode = "1.3"
pyo3 = { version = "0.25.0", features = ["auto-initialize", "abi3-py313"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
tokio = { version = "1.37", features = ["full", "sync"] }
ctrlc = "3"
sysinfo = "0.35.2"

[build-dependencies]
pyo3-build-config = "0.25.0"
